// Copyright 2024 TII (SSRC) and the Ghaf contributors
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
option go_package = "./admin";
package admin;

message UnitStatus {
    string Name = 1;
	string Description = 2;
	string LoadState = 3;
	string ActiveState = 4;
	string Path = 5;
}

message TransportConfig {
    string Protocol = 1;
	string Address = 2;
	string Port = 3;
    string Name = 4;
}

message RegistryRequest {
    string Name = 1;
    string Parent = 2;
    uint32 Type = 3;
    TransportConfig Transport = 4;
	UnitStatus State = 5;
}

message RegistryResponse {
    optional string Error = 1;
}

message ApplicationRequest {
    string AppName = 1;
    optional string VmName = 2;
    repeated string Args = 3;
}

message StartVMRequest {
    string VmName = 1;
}

message StartServiceRequest {
    string ServiceName = 1;
    string VmName = 2;
}

message StartResponse {
    string registry_id = 1; // Registry ID for newly started app, service or vm
}

message ApplicationResponse {
    string CmdStatus = 1;
    string AppStatus = 2;
}

message Empty {
}

message QueryListItem {
    string Name = 1;
    string Description = 2;
    string VmStatus = 3;
    string TrustLevel = 4;
    string VmType = 5;
    string ServiceType = 6;
    optional string VmName = 7; // None for host running services
    optional string AgentName = 8; // None for agents
}

message QueryListResponse {
    repeated QueryListItem List = 1;
}

message WatchItem {
    oneof Status {
        QueryListResponse Initial = 1;
        QueryListItem Added = 2;
        QueryListItem Updated = 3;
        QueryListItem Removed = 4;
    }
}

message LocaleRequest {
    string Locale = 1;
}

message TimezoneRequest {
    string Timezone = 1;
}

service AdminService {
    rpc RegisterService(RegistryRequest) returns (RegistryResponse) {}

    // Start things
    rpc StartApplication(ApplicationRequest) returns (StartResponse) {}
    rpc StartVM(StartVMRequest) returns (StartResponse) {}
    rpc StartService(StartServiceRequest) returns (StartResponse) {}

    // Manage things
    rpc PauseApplication(ApplicationRequest) returns (ApplicationResponse) {}
    rpc ResumeApplication(ApplicationRequest) returns (ApplicationResponse) {}
    rpc StopApplication(ApplicationRequest) returns (ApplicationResponse) {}

    // Misc
    rpc SetLocale(LocaleRequest) returns (Empty) {}
    rpc SetTimezone(TimezoneRequest) returns (Empty) {}
    rpc Poweroff(Empty) returns (Empty) {}
    rpc Reboot(Empty) returns (Empty) {}
    rpc Suspend(Empty) returns (Empty) {}
    rpc Wakeup(Empty) returns (Empty) {}

    // Query
    rpc QueryList(Empty) returns (QueryListResponse) {}
    rpc Watch(Empty) returns (stream WatchItem) {}
}
